--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,35 +8,52 @@
     <meta name="keywords" content="biography">
     <meta name="description" content="Моя биография">
     <title>malikaisak.nim</title>
+    <link rel="stylesheet" href="01_mm.css">
 </head>
 
-    
+<div class="container">
     <h1>Привет!</h1>
+
+    <br>
 
     <h2>Меня зовут Малика</h2>
 
+    <br>
+
     <p>Я закончила <strong>школу-гимназии №13.</strong></p>
 
-    <p><a href="https://t.me/Typinki" target="_blank">Мой тг|</a></p>
+    <div class="sait">
+
+        <h4>Мои соц.сети</h4>
+
+        <p><a href="https://t.me/Typinki" target="_blank">Мой тг|</a></p>
+
+        <p>
+            <button class="btn">Кнопка!</button>
+        </p>
+
+    </div>
 
     <br>
 
-    <img src="MMM" width="300" alt="прекрасная я)">
+    <img src="MMM" alt="я)" class="avatar">
 
     <br>
 
-    <h2>Мои хобби</h2>
+    <div class="hobbi">
+        <h2>Мои хобби</h2>
 
-    <ul>
-        <li>Читать</li>
-        <li>Играть в баскетбол</li>
-        <li>Рисовать</li>
-        <li>Вышивать</li>
-        <li>Печь</li>
-    </ul>
+        <ul class="listhobbi">
+            <li>Читать</li>
+            <li>Играть в баскетбол</li>
+            <li>Рисовать</li>
+            <li>Вышивать</li>
+            <li>Печь</li>
+        </ul>
+    </div>
 
     <br>
-    
+
     <h2>Опыт работы</h2>
 
     <table>
@@ -44,7 +62,7 @@
                 <th>Название</th>
                 <th>Должность</th>
                 <th>Год</th>
-            </tr>    
+            </tr>
         </thead>
         <tbody>
             <tr>
@@ -55,28 +73,122 @@
         </tbody>
     </table>
     <br>
-    <h2>Связаться со мной</h2>
+
     <br>
-    <form>
-        <div>
-           <label for="text" aria-placeholder="Введите имя">Ваше имя:</label>
-           <input type="text" id="text">
+    <form action="/" class="form">
+        <h2>Связаться со мной</h2>
+
+        <div class="form-row">
+
+            <div class="form-grup">
+
+                <label for="text" aria-placeholder="Введите имя">Ваше имя:</label>
+                <input type="text" id="text">
+
+            </div>
+
+            <div class="form-grup">
+
+                <label for="email" aria-placeholder="Введите email">Ваш Email:</label>
+                <input type="email" id="email">
+
+            </div>
+
         </div>
 
-        <div>
-            <label for="email" aria-placeholder="Введите email">Ваш Email:</label>
-            <input type="email" id="email">
-        </div>
+        <div class="form-grup">
 
-        <div>
             <label for="message" aria-placeholder="Введите сообщение">Ваше сообщение:</label>
-            <br>
             <textarea id="message" cols="30" rows="10"></textarea>
+
         </div>
 
         <button type="submit">Отправить!</button>
+        <div class="card html">
+            <h2>День</h2>
+            <p>Прекрасный день</p>
+        </div>
+        <div class="card css">
+            <h2>Ночь</h2>
+            <p>Спокойная ночь</p>
+        </div>
+
     </form>
     <br>
 
+    <header id="header" style="border: 1px solid grey;">
+        <h3>Я вас люблю</h3>
+    </header>
+
+    <div class="card">
+        <h2>Краски</h2>
+
+        <h3 class="color-1">Цвет</h3>
+    </div>
+
+    <div class="card">
+        <h2>Границы</h2>
+
+        <p class="border-1">У каждого человека свои границы</p>
+    </div>
+
+    <br>
+
+    <ul class="list">
+        <h3>Lists</h3>
+        <li>Lorem, ipsum dolor.</li>
+        <li>Illum, eius rerum?</li>
+        <li>Magni, id distinctio!</li>
+        <li>At, possimus impedit.</li>
+        <li>Consequuntur, dolores perspiciatis.</li>
+    </ul>
+
+    <table class="table">
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+        </tr>
+    </table>
+
+</div>
 </body>
+
 </html>
